--- a/phpPartidos/css/menu.css
+++ b/phpPartidos/css/menu.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background: linear-gradient(to bottom, #f7f1f8, #e9e5f3); /* Fondo degradado */
+    background-color: #773ebc; /* Fondo degradado */
     font-family: Arial, sans-serif;
     align-self:center;
 }
@@ -10,7 +10,7 @@ body {
     margin: 50px auto;
     max-width: 600px;
     padding: 20px;
-    background-color: rgba(237, 229, 243, 0.9); /* Color de fondo con transparencia */
+    background-color: rgba(102, 43, 148, 0.9); /* Color de fondo con transparencia */
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     align-self: center;
@@ -39,7 +39,7 @@ body {
 .grupoInputs input {
     width: 100%;
     padding: 10px;
-    border: 1px solid rgba(106, 95, 134, 0.3); /* Violeta suave */
+    border: 1px solid rgba(201, 201, 201, 0.3); /* Violeta suave */
     border-radius: 5px;
     transition: border-color 0.3s;
 }
